# shogi-eye

./: LICENSE  README.md  hello.py  pyproject.toml
shogi_eye/: __init__.py  __main__.py  board_detection.py  grid_drawer.py  piece_recognition.py
